--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/pictures/devil_icon.svg"
+      href="pictures/devil_icon.svg"
     />
     <meta
       name="viewport"
@@ -17,7 +17,7 @@
     <div id="root"></div>
     <script
       type="module"
-      src="/src/main.tsx"
+      src="src/main.tsx"
     ></script>
   </body>
 </html>
